# codespaces-devcontainer-test

./: Makefile  pyproject.toml
.devcontainer/: devcontainer.json
