[tool.poetry]
name = "data-journalism-project"
version = "0.1.0"
description = "A data journalism project template."
authors = ["Chris Hacker <49451910+christopher-hacker@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
black = "*"
pylint = "*"
jupyter = "*"
pandas = "*"
csvkit = "*"
geopandas = "*"
pandera = {extras = ["io"], version = "*"}
matplotlib = "*"
seaborn = "*"
hvplot = "*"
folium = "*"
tqdm = "*"
pyyaml = "*"
pdfplumber = "*"
airtable = "*"
python-dotenv = "*"
lxml = "*"
openpyxl = "*"
rtree = "*"
thefuzz = "*"
python-levenshtein = "*"
notebook-as-pdf = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
